--- a/index.html
+++ b/index.html
@@ -10,16 +10,24 @@
 <body>
     <div class="header"> 
         <div class="title">
-            <img src="/images/google.logo.png" alt="logo" class="logo">
+            <img src="/images/google.logo.png" alt="logo">
         </div>
     </div>
-    <div class="navbar" id="topnavbar">
-        <ul>
-            <li><a href="About">About</a></li>
-            <li><a href="Store">Store</a></li>
-            <li><a href="Gmail">Gmail</a></li>
-            <li><a href="Images">Images</a><li>
-        </ul>
+    <div class="navbar">
+        <div id="container">
+            <ul class="sub">
+                <li class="left"><a href="About">About</a></li>
+                <li class="left"><a href="Store">Store</a></li>      
+                <li class="right"><a href="Images">Images</a></li>
+                <li class="right"><a href="Gmail">Gmail</a><li>
+            </ul>
+        </div>
+    </div>
+    <div class="search">
+        <label for="site-search"></label>
+        <input type="search" id="search-google" name="gog">
+        <button>Google Search</button>
+        <button>I'm Feeling Lucky</button>
     </div>
 </body>
 </html>
